--- a/WebContent/css/black.css
+++ b/WebContent/css/black.css
@@ -18,17 +18,17 @@ body {
 	margin:20px auto;
 }
 
-#header {
+header {
 	padding:10px 0;
 	text-align:right;
 }
 
-#header h1 {
+header h1 {
 	font-size:56px;
 	text-transform:uppercase;
 }
 
-#header address {
+header address {
 	float:right;
 	margin-top:-70px;
 	font-size:16px;
@@ -36,7 +36,7 @@ body {
 	font-style:normal;
 }
 
-#menu li {
+nav li {
 	float:left;
 	border-top:1px solid #ffffff;
 	border-right:1px solid #ffffff;
@@ -69,7 +69,7 @@ li.highlight a {
 	text-decoration:none;
 }
 
-#content {
+main {
 	clear:both;
 	height:380px;
 	padding:10px;
@@ -77,19 +77,19 @@ li.highlight a {
 	color:#000000;
 }
 
-#content a {
+main a {
 	color:#000000;
 }
 
-div.normal {
+main.normal {
 	background:#ffffff;
 }
 
-div.loading {
+main.loading {
 	background:#ffffff url("../img/black/loading.gif") no-repeat center;
 }
 
-#content ul {
+main ul {
 	margin-left:20px;
 	line-height:26px;
 }
