--- a/WebContent/css/word.css
+++ b/WebContent/css/word.css
@@ -112,7 +112,7 @@ footer {
 	vertical-align:middle;
 }
 
-#styleCredits {
+#stylecredits {
 	margin-left:4px;
 	font-size:12px;
 	font-weight:bold;
