--- a/web/css/word.css
+++ b/web/css/word.css
@@ -14,11 +14,8 @@ body {
 
 #box {
 	width:600px;
-	border-top:1px solid #000000;
-	border-right:3px solid #000000;
-	border-bottom:3px solid #000000;
-	border-left:1px solid #000000;
 	background:#ffffff;
+	box-shadow:4px 4px 2px;
 	margin:50px;
 	padding:60px 100px;
 }
@@ -26,7 +23,7 @@ body {
 header {
 	border-bottom:1px solid #000000;
 	margin-bottom:30px;
-	padding:30px 0 8px 0;
+	padding:30px 0 8px;
 }
 
 header h1 {
@@ -46,8 +43,8 @@ nav {
 }
 
 nav li {
-	list-style:none;
 	padding:10px;
+	list-style:none;
 	font-size:16px;
 	font-weight:bold;
 }
@@ -78,9 +75,9 @@ main {
 	float:right;
 	width:410px;
 	height:400px;
-	overflow:auto;
 	margin-bottom:30px;
 	padding:10px;
+	overflow:auto;
 }
 
 main.normal {
@@ -96,44 +93,47 @@ main ul {
 	line-height:26px;
 }
 
+main a {
+	color:#000000;
+	text-decoration:none;
+}
+
+main a:hover {
+	font-weight:bold;
+}
+
 footer {
 	clear:both;
 	border-top:1px solid #000000;
 	padding-bottom:30px;
+	font-size:12px;
 }
 
 #styleswitcher {
-	float:left;
+	float:right;
 	padding-top:4px;
 }
 
 #styleswitcher img {
 	border:1px solid #000000;
-	vertical-align:middle;
 }
 
 #stylecredits {
-	margin-left:4px;
-	font-size:12px;
+	float:left;
+	margin:2px 6px;
 	font-weight:bold;
 }
 
 #download {
 	float:left;
-	padding:6px 30px;
+	margin-top:6px;
 }
 
 #download a {
 	color:#000000;
-	font-size:12px;
 	text-decoration:none;
 }
 
 #download a:hover {
 	font-weight:bold;
-}
-
-#w3cicons {
-	float:right;
-	padding-top:4px;
 }
