Font families containing white spaces quoted.

--- a/web/css/black.css
+++ b/web/css/black.css
@@ -9,7 +9,7 @@ img {
 
 body {
 	background:url("../img/black/background.jpg");
-	font:12px Courier New, monospace;
+	font:12px "Courier New", monospace;
 	color:#ffffff;
 }
 
