--- a/web/css/lines.css
+++ b/web/css/lines.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Pacifico);
+
 * {
 	margin: 0;
 	padding: 0;
@@ -10,7 +12,7 @@ img {
 body {
 	background: url("../img/lines/background.gif");
 	overflow-y: scroll;
-	font: 20px "Lucida Console", monospace;
+	font: 20px Pacifico, cursive;
 	color: #330000;
 }
 
@@ -19,11 +21,19 @@ header {
 	top: 40px;
 	width: 100%;
 	height: 150px;
-	background: url("../img/lines/header.png") no-repeat center, url("../img/lines/background.gif");
+	background: url("../img/lines/background.gif");
+	text-align: center;
 }
 
-header h1, header address {
-	display: none;
+header h1 {
+	margin-top: 10px;
+	font-size: 50px;
+	font-weight: normal;
+}
+
+header address {
+	background: url("../img/lines/address.png") center no-repeat;
+	font-style: normal;
 }
 
 nav {
