--- a/web/css/cidade.css
+++ b/web/css/cidade.css
@@ -14,7 +14,7 @@ body {
 }
 
 #box {
-	width: 700px;
+	width: 860px;
 	margin: 80px auto;
 }
 
@@ -29,21 +29,20 @@ header h1, header address {
 }
 
 #middle {
-	width: 100%;
-	height: 222px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.38);
 	opacity: 0.94;
+	overflow: auto;
 }
 
 nav {
 	float: left;
-	width: 200px;
-	height: 222px;
 }
 
 nav li {
+	height: 54px;
 	margin: 6px;
 	padding: 6px;
+	line-height: 54px;
 	text-align: right;
 	list-style: none;
 	font-size: 16px;
@@ -72,12 +71,10 @@ li.highlight a {
 }
 
 main {
-	float: left;
-	width: 488px;
-	height: 210px;
-	margin-top: 6px;
-	padding-right: 6px;
+	height: 426px;
+	margin: 6px;
 	overflow: auto;
+	font-size: 14px;
 }
 
 main.normal {
@@ -89,9 +86,16 @@ main.loading {
 }
 
 main ul {
-	margin-left: 8px;
-	line-height: 26px;
+	line-height: 30px;
 	list-style: none;
+}
+
+main > ul {
+	margin: 0 8px;
+}
+
+main > ul ul {
+	margin-left: 16px;
 }
 
 main a {
